change align left text note row

--- a/frontend/src/components/Calendar/calendar.css
+++ b/frontend/src/components/Calendar/calendar.css
@@ -445,6 +445,7 @@
 }
 
 .dayRowNoteText {
+    text-align: left;
     overflow: hidden;
     display: -webkit-box;
     -webkit-box-orient: vertical;
